Fixed element alignments

--- a/css/style.css
+++ b/css/style.css
@@ -10,23 +10,27 @@ body {
 }
 
 h1 {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
 }
 
 section {
     height: 100vh;
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 footer {
     position: fixed;
+    box-sizing: border-box;
     bottom: 0;
     left: 0;
     width: 100%;
     text-align: center;
     padding: 30px;
+    justify-content: center;
 }
